gh-2578 Change some injections to providers